syntax = "proto3";

package def.matching;

option java_package = "com.game.match.proto";
option java_outer_classname = "MethodProtos";
option java_multiple_files = true;

enum MATCHING_METHODS {
    // 加入匹配队列
    JOIN_MATCH_QUENE = 0;
    // 取消匹配
    CANCEL_MATCH_QUENE = 1;
}